--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     <section id="sobre" class="section">
       <div class="container grid-2">
         <div class="media-frame">
-          <img class="cover-img" src="Laura.jpeg" alt="Foto de Laura Sathler" loading="lazy" decoding="async">
+          <img class="cover-img" src="Laura-avatar-512.png" alt="Foto de Laura Sathler" loading="lazy" decoding="async">
         </div>
         <div class="section-box">
           <h2>Sobre mim</h2>
