--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       --radius:12px;
       --shadow:0 2px 8px rgba(0,0,0,.10);
 
-      /* Ritmo vertical (desktop / mobile) */
       --space-lg:56px;
       --space-md:28px;
       --space-sm:14px;
@@ -61,7 +60,7 @@
 
     .container{ width:min(var(--maxw), 92vw); margin-inline:auto }
 
-    /* ===== Header (estável) ===== */
+    /* ===== Header ===== */
     header{
       position:sticky; top:0; z-index:30;
       background:color-mix(in srgb, var(--brand) 96%, #000 0%);
@@ -72,7 +71,6 @@
     .nav{
       display:grid; row-gap:.35rem; padding:var(--header-pad) 0;
     }
-    /* Desktop: [brand] [logo] 1ª linha; menu central abaixo */
     @media (min-width:901px){
       .nav{
         grid-template-columns: 1fr auto;
@@ -81,7 +79,6 @@
           "nav   logo";
       }
     }
-    /* Mobile */
     @media (max-width:900px){
       .nav{
         grid-template-columns: 1fr auto;
@@ -140,7 +137,7 @@
       .brand-logo{ height:var(--logo-h-mobile) }
     }
 
-    /* ===== Seções (ritmo padronizado) ===== */
+    /* ===== Seções ===== */
     .section{ padding-block: var(--space-lg); scroll-margin-top:var(--anchor-offset) }
     @media (max-width:900px){ .section{ padding-block: 42px } }
 
@@ -154,7 +151,7 @@
     /* Grades */
     .grid-2{
       display:grid; gap: var(--space-md);
-      grid-template-columns: 1fr 1fr; align-items:stretch;
+      grid-template-columns: 1fr 1fr; align-items:center;
     }
     @media (max-width:900px){ .grid-2{ grid-template-columns:1fr } }
 
@@ -165,22 +162,31 @@
     }
     @media (max-width:900px){ .grid-3{ grid-template-columns:1fr } }
 
-    /* Cards das especialidades com altura igual e botões alinhados */
+    /* Cards das especialidades */
     .grid-3 .section-box{
-      display:flex; flex-direction:column; gap:12px; /* ritmo interno */
-      min-height: 100%; /* equaliza visualmente */
+      display:flex; flex-direction:column; gap:12px;
     }
-    .grid-3 .section-box ul{ margin:0 0 8px 1.15rem }
     .grid-3 .mini-cta{ margin-top:auto; display:flex; justify-content:center }
 
-    /* Mídia (imagens) */
+    /* ===== Imagens ===== */
     .media-frame{
-      border-radius:var(--radius); overflow:hidden; background:#0f5b5d;
-      display:block; height:100%; min-height: 360px; /* altura consistente no desktop */
+      border-radius:var(--radius);
+      overflow:hidden;
+      background:#0f5b5d;
+      display:block;
+      aspect-ratio: 3 / 2;
+      height:auto;
+      min-height:unset;
     }
     .cover-img{ width:100%; height:100%; object-fit:cover; display:block }
-    @media (max-width:900px){
-      .media-frame{ min-height: 260px; }
+    @media (max-width:900px){ .media-frame{ aspect-ratio:3/2; } }
+
+    /* ===== Ajuste de largura do texto (desktop) ===== */
+    @media (min-width:901px){
+      #psicoterapia .container.grid-2{
+        grid-template-columns: 1.25fr 0.95fr;
+      }
+      #psicoterapia .section-box{ padding:28px 28px 32px; }
     }
 
     /* Botões */
@@ -188,11 +194,10 @@
       display:inline-block; background:var(--gold); color:var(--card);
       border:none; border-radius:8px; padding:10px 20px; font-weight:700;
       min-width:180px; text-align:center; transition:.25s; text-decoration:none;
-      line-height:1.1;
     }
     .btn:hover{ background:var(--mint); color:var(--brand) }
 
-    /* Ícones de contato */
+    /* Social */
     .social{ display:flex; justify-content:center; gap:12px; flex-wrap:wrap; margin-top:12px }
     .social a{ display:inline-flex; width:52px; height:52px; border-radius:12px; overflow:hidden }
 
@@ -200,7 +205,7 @@
     footer{
       background:var(--brand-2); color:#fff;
       border-top:1px solid rgba(255,255,255,.14);
-      padding: 28px 0;
+      padding:28px 0;
     }
     .footer-content{ display:grid; grid-template-columns:1fr auto; align-items:center; column-gap:1rem }
     .footer-text{ text-align:center }
@@ -209,32 +214,21 @@
       filter:drop-shadow(0 4px 12px rgba(0,0,0,.15));
     }
     @media (max-width:900px){ .footer-logo{ height:var(--logo-h-mobile) } }
-
-    /* Acessibilidade / Motion */
-    @media (prefers-reduced-motion: reduce){
-      .brand-logo, nav a::after{ transition:none }
-    }
   </style>
 </head>
+
 <body>
-  <!-- ===== HEADER ===== -->
   <header id="topbar">
     <div class="container nav">
       <div class="brand-info" aria-label="Identidade do site">
         <b>Laura Sathler</b>
         <small>Psicóloga · CRP 04/30866</small>
       </div>
-
-      <!-- Mobile: botão + checkbox do menu -->
       <input id="menu" class="menu-toggle" type="checkbox" />
       <label for="menu" class="menu-btn" aria-label="Abrir menu">☰ Menu</label>
-
-      <!-- Logo à direita -->
       <div class="logo-wrap">
         <img src="Logomarca.png" alt="Logomarca Laura Sathler" class="brand-logo" onerror="this.style.display='none'">
       </div>
-
-      <!-- Navegação centralizada -->
       <nav aria-label="principal">
         <ul>
           <li><a href="#psicoterapia">O que é Psicoterapia</a></li>
@@ -248,7 +242,7 @@
   </header>
 
   <main>
-    <!-- ===== Psicoterapia (TEXTO ESQ | IMAGEM DIR) ===== -->
+    <!-- ===== Psicoterapia ===== -->
     <section id="psicoterapia" class="section">
       <div class="container grid-2">
         <div class="section-box">
@@ -257,16 +251,16 @@
           <p>Esse caminho nem sempre é simples; ele exige presença e coragem para olhar para dentro. Mas também é um espaço de encontro, clareza e afeto, que abre possibilidades para escolhas mais conscientes e formas mais autênticas de viver.</p>
         </div>
         <div class="media-frame">
-          <img class="cover-img" src="Terapeuta-Paciente.png" alt="Terapeuta e paciente em diálogo acolhedor" loading="lazy" decoding="async">
+          <img class="cover-img" src="Terapeuta-Paciente.png" alt="Terapeuta e paciente em diálogo acolhedor" loading="lazy">
         </div>
       </div>
     </section>
 
-    <!-- ===== Sobre mim (IMAGEM ESQ | TEXTO DIR) ===== -->
+    <!-- ===== Sobre mim ===== -->
     <section id="sobre" class="section">
       <div class="container grid-2">
         <div class="media-frame">
-          <img class="cover-img" src="Laura-avatar-512.png" alt="Foto de Laura Sathler" loading="lazy" decoding="async">
+          <img class="cover-img" src="Laura-avatar-512.png" alt="Foto de Laura Sathler" loading="lazy">
         </div>
         <div class="section-box">
           <h2>Sobre mim</h2>
@@ -283,13 +277,13 @@
       <div class="container">
         <div class="section-box" style="text-align:center; margin-bottom:var(--space-md)">
           <h2>Especialidades de atendimento</h2>
-          <p class="muted">Mais do que diagnósticos, trabalho com histórias. Abaixo, situações comuns que podem indicar que é hora de buscar ajuda.</p>
+          <p>Mais do que diagnósticos, trabalho com histórias. Abaixo, situações comuns que podem indicar que é hora de buscar ajuda.</p>
         </div>
 
         <div class="grid-3">
           <div class="section-box">
             <h3>Adolescentes</h3>
-            <p class="muted">Crescer com segurança emocional: escuta para o jovem e para a família.</p>
+            <p>Crescer com segurança emocional: escuta para o jovem e para a família.</p>
             <ul>
               <li>Autoestima, insegurança e comparação nas redes</li>
               <li>Ansiedade escolar, provas e pressão por desempenho</li>
@@ -301,7 +295,7 @@
 
           <div class="section-box">
             <h3>Adultos</h3>
-            <p class="muted">Clareza para decidir e respirar melhor: retome a própria direção.</p>
+            <p>Clareza para decidir e respirar melhor: retome a própria direção.</p>
             <ul>
               <li>Ansiedade, estresse e crises de pânico</li>
               <li>Depressão e sentimentos de vazio</li>
@@ -315,7 +309,7 @@
 
           <div class="section-box">
             <h3>Casais</h3>
-            <p class="muted">Reencontro, diálogo e projeto comum: fortaleça a conexão.</p>
+            <p>Reencontro, diálogo e projeto comum: fortaleça a conexão.</p>
             <ul>
               <li>Comunicação e resolução de conflitos</li>
               <li>Reaproximação emocional e afetiva</li>
@@ -329,21 +323,20 @@
 
         <div class="section-box" style="text-align:center; margin-top:var(--space-md)">
           <strong>Não precisa enfrentar tudo sozinho(a).</strong>
-          <p class="muted" style="margin:.5rem 0 1rem">Se você se identificou com algum ponto, um primeiro encontro pode trazer clareza sobre próximos passos.</p>
+          <p style="margin:.5rem 0 1rem">Se você se identificou com algum ponto, um primeiro encontro pode trazer clareza sobre próximos passos.</p>
           <div class="mini-cta">
-            <a class="btn" href="https://wa.me/5531991593800?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20psicoterapia.">Agendar sessão</a>
+            <a class="btn" href="https://wa.me/5531991593800?text=Olá,%20gostaria%20de%20agendar%20uma%20sessão%20de%20psicoterapia.">Agendar sessão</a>
             <a class="btn" href="mailto:Laurasathler@yahoo.com.br">Falar por e-mail</a>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- ===== Quando procurar ===== -->
+    <!-- ===== Quando ===== -->
     <section id="quando" class="section">
       <div class="container">
         <div class="section-box">
           <h2>Quando buscar terapia?</h2>
-          <p>Pode ser o momento de iniciar um processo terapêutico quando você:</p>
           <ul>
             <li>Sente ansiedade, tristeza ou cansaço emocional frequentes.</li>
             <li>Percebe dificuldade para lidar com mudanças, perdas ou transições de vida.</li>
@@ -358,74 +351,4 @@
     <!-- ===== Contato ===== -->
     <section id="contato" class="section">
       <div class="container">
-        <div class="section-box" style="text-align:center">
-          <h2>Agende sua sessão</h2>
-          <p>Estou à disposição para conversar e iniciar um processo terapêutico com você.</p>
-
-          <div class="social" aria-label="Canais de contato">
-            <!-- WhatsApp -->
-            <a href="https://wa.me/5531991593800" target="_blank" rel="noopener" aria-label="WhatsApp">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><circle cx="32" cy="32" r="32" fill="#25D366"/><path fill="#fff" d="M45.6 18.4A16.5 16.5 0 0 0 16.7 43.9l-1.1 6.9 7-1.1A16.5 16.5 0 0 0 45.6 18.4Zm-6 23.8a13.2 13.2 0 0 1-6.5 1.8h-.1a13 13 0 0 1-5.7-1.4l-.4-.2-4.2.7.7-4.1-.3-.4a13 13 0 1 1 16.5 3.6Z"/></svg>
-            </a>
-            <!-- E-mail -->
-            <a href="mailto:Laurasathler@yahoo.com.br" aria-label="E-mail">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><rect x="4" y="12" width="56" height="40" rx="8" fill="#4f7cff"/><path fill="#fff" d="M10 20l22 14L54 20v6L32 40 10 26z"/></svg>
-            </a>
-            <!-- Instagram -->
-            <a href="https://www.instagram.com/laurasathler_psi" target="_blank" rel="noopener" aria-label="Instagram">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
-                <defs>
-                  <linearGradient id="ig" x1="0" y1="64" x2="64" y2="0">
-                    <stop offset="0" stop-color="#feda75"/><stop offset=".3" stop-color="#fa7e1e"/>
-                    <stop offset=".6" stop-color="#d62976"/><stop offset=".85" stop-color="#962fbf"/>
-                    <stop offset="1" stop-color="#4f5bd5"/>
-                  </linearGradient>
-                </defs>
-                <rect x="6" y="6" width="52" height="52" rx="14" fill="url(#ig)"/>
-                <circle cx="32" cy="32" r="11" fill="none" stroke="#fff" stroke-width="4"/>
-                <circle cx="46" cy="18" r="3.5" fill="#fff"/>
-              </svg>
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <!-- ===== Rodapé ===== -->
-  <footer>
-    <div class="container footer-content">
-      <div class="footer-text">© <span id="year"></span> Laura Sathler · Psicóloga · CRP 04/30866</div>
-      <img src="Logomarca.png" alt="Logomarca Laura Sathler" class="footer-logo" onerror="this.style.display='none'">
-    </div>
-  </footer>
-
-  <script>
-    // Ano dinâmico
-    document.getElementById('year').textContent = new Date().getFullYear();
-
-    // Sombra do topo ao rolar (sem alterar altura)
-    const header = document.getElementById('topbar');
-    function onScroll(){ header.classList.toggle('scrolled', window.scrollY > 10); }
-    window.addEventListener('scroll', onScroll, {passive:true});
-    window.addEventListener('load', onScroll);
-
-    // Offset das âncoras conforme altura real do header
-    function setOffset(){
-      const h = header.offsetHeight;
-      document.documentElement.style.setProperty('--anchor-offset', h + 'px');
-    }
-    window.addEventListener('load', setOffset);
-    window.addEventListener('resize', setOffset);
-
-    // Fecha menu mobile ao clicar num link e recalcula offset
-    document.querySelectorAll('nav a').forEach(a=>{
-      a.addEventListener('click',()=>{
-        const cb=document.getElementById('menu');
-        if(cb) cb.checked=false;
-        setOffset();
-      });
-    });
-  </script>
-</body>
-</html>
+        <div class="section-box" style
