--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
       backdrop-filter:saturate(150%) blur(6px);
       transition:box-shadow .2s ease;
     }
-    .nav{
-      display:grid; row-gap:.35rem; padding:var(--header-pad) 0;
-    }
+    .nav{ display:grid; row-gap:.35rem; padding:var(--header-pad) 0; }
     @media (min-width:901px){
       .nav{
         grid-template-columns: 1fr auto;
@@ -163,29 +161,23 @@
     @media (max-width:900px){ .grid-3{ grid-template-columns:1fr } }
 
     /* Cards das especialidades */
-    .grid-3 .section-box{
-      display:flex; flex-direction:column; gap:12px;
-    }
+    .grid-3 .section-box{ display:flex; flex-direction:column; gap:12px; }
     .grid-3 .mini-cta{ margin-top:auto; display:flex; justify-content:center }
 
-    /* ===== Imagens ===== */
+    /* Imagens */
     .media-frame{
       border-radius:var(--radius);
       overflow:hidden;
       background:#0f5b5d;
       display:block;
       aspect-ratio: 3 / 2;
-      height:auto;
-      min-height:unset;
     }
     .cover-img{ width:100%; height:100%; object-fit:cover; display:block }
-    @media (max-width:900px){ .media-frame{ aspect-ratio:3/2; } }
+    @media (max-width:900px){ .media-frame{ aspect-ratio:3/2 } }
 
-    /* ===== Ajuste de largura do texto (desktop) ===== */
+    /* Ajuste de largura do texto (desktop) */
     @media (min-width:901px){
-      #psicoterapia .container.grid-2{
-        grid-template-columns: 1.25fr 0.95fr;
-      }
+      #psicoterapia .container.grid-2{ grid-template-columns: 1.25fr 0.95fr; }
       #psicoterapia .section-box{ padding:28px 28px 32px; }
     }
 
@@ -218,17 +210,24 @@
 </head>
 
 <body>
+  <!-- ===== HEADER ===== -->
   <header id="topbar">
     <div class="container nav">
       <div class="brand-info" aria-label="Identidade do site">
         <b>Laura Sathler</b>
         <small>Psicóloga · CRP 04/30866</small>
       </div>
+
+      <!-- Mobile: botão + checkbox -->
       <input id="menu" class="menu-toggle" type="checkbox" />
       <label for="menu" class="menu-btn" aria-label="Abrir menu">☰ Menu</label>
+
+      <!-- Logo à direita -->
       <div class="logo-wrap">
         <img src="Logomarca.png" alt="Logomarca Laura Sathler" class="brand-logo" onerror="this.style.display='none'">
       </div>
+
+      <!-- Navegação centralizada -->
       <nav aria-label="principal">
         <ul>
           <li><a href="#psicoterapia">O que é Psicoterapia</a></li>
@@ -348,7 +347,82 @@
       </div>
     </section>
 
-    <!-- ===== Contato ===== -->
+    <!-- ===== Contato (corrigido) ===== -->
     <section id="contato" class="section">
       <div class="container">
-        <div class="section-box" style
+        <div class="section-box" style="text-align:center">
+          <h2>Agende sua sessão</h2>
+          <p>Estou à disposição para conversar e iniciar um processo terapêutico com você.</p>
+
+          <div class="mini-cta" style="justify-content:center">
+            <a class="btn" href="https://wa.me/5531991593800?text=Olá,%20gostaria%20de%20agendar%20uma%20sessão%20de%20psicoterapia.">📱 WhatsApp</a>
+            <a class="btn" href="mailto:Laurasathler@yahoo.com.br">📧 E-mail</a>
+          </div>
+
+          <div class="social" aria-label="Canais de contato">
+            <!-- WhatsApp -->
+            <a href="https://wa.me/5531991593800" target="_blank" rel="noopener" aria-label="WhatsApp">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><circle cx="32" cy="32" r="32" fill="#25D366"/><path fill="#fff" d="M45.6 18.4A16.5 16.5 0 0 0 16.7 43.9l-1.1 6.9 7-1.1A16.5 16.5 0 0 0 45.6 18.4Zm-6 23.8a13.2 13.2 0 0 1-6.5 1.8h-.1a13 13 0 0 1-5.7-1.4l-.4-.2-4.2.7.7-4.1-.3-.4a13 13 0 1 1 16.5 3.6Z"/></svg>
+            </a>
+            <!-- E-mail -->
+            <a href="mailto:Laurasathler@yahoo.com.br" aria-label="E-mail">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><rect x="4" y="12" width="56" height="40" rx="8" fill="#4f7cff"/><path fill="#fff" d="M10 20l22 14L54 20v6L32 40 10 26z"/></svg>
+            </a>
+            <!-- Instagram -->
+            <a href="https://www.instagram.com/laurasathler_psi" target="_blank" rel="noopener" aria-label="Instagram">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+                <defs>
+                  <linearGradient id="ig" x1="0" y1="64" x2="64" y2="0">
+                    <stop offset="0" stop-color="#feda75"/><stop offset=".3" stop-color="#fa7e1e"/>
+                    <stop offset=".6" stop-color="#d62976"/><stop offset=".85" stop-color="#962fbf"/>
+                    <stop offset="1" stop-color="#4f5bd5"/>
+                  </linearGradient>
+                </defs>
+                <rect x="6" y="6" width="52" height="52" rx="14" fill="url(#ig)"/>
+                <circle cx="32" cy="32" r="11" fill="none" stroke="#fff" stroke-width="4"/>
+                <circle cx="46" cy="18" r="3.5" fill="#fff"/>
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- ===== Rodapé ===== -->
+  <footer>
+    <div class="container footer-content">
+      <div class="footer-text">© <span id="year"></span> Laura Sathler · Psicóloga · CRP 04/30866</div>
+      <img src="Logomarca.png" alt="Logomarca Laura Sathler" class="footer-logo" onerror="this.style.display='none'">
+    </div>
+  </footer>
+
+  <script>
+    // Ano dinâmico
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    // Sombra do topo ao rolar (sem alterar altura)
+    const header = document.getElementById('topbar');
+    function onScroll(){ header.classList.toggle('scrolled', window.scrollY > 10); }
+    window.addEventListener('scroll', onScroll, {passive:true});
+    window.addEventListener('load', onScroll);
+
+    // Offset das âncoras conforme altura real do header
+    function setOffset(){
+      const h = header.offsetHeight;
+      document.documentElement.style.setProperty('--anchor-offset', h + 'px');
+    }
+    window.addEventListener('load', setOffset);
+    window.addEventListener('resize', setOffset);
+
+    // Fecha menu mobile ao clicar num link e recalcula offset
+    document.querySelectorAll('nav a').forEach(a=>{
+      a.addEventListener('click',()=>{
+        const cb=document.getElementById('menu');
+        if(cb) cb.checked=false;
+        setOffset();
+      });
+    });
+  </script>
+</body>
+</html>
