--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     :root{
       /* Paleta */
       --brand:#146B6D;     /* fundo principal */
-      --brand-2:#104E50;   /* rodapé / faixas escuras */
+      --brand-2:#104E50;   /* rodapé */
       --card:#F6F5F0;      /* quadros de texto */
       --text:#3E3E3E;      /* texto */
       --gold:#C6A56B;      /* títulos/botões */
@@ -19,16 +19,18 @@
       --maxw:1080px;
       --radius:12px;
       --shadow:0 2px 8px rgba(0,0,0,.10);
-      --space-xl:72px; --space-lg:56px; --space-md:28px; --space-sm:14px;
+
+      --space-xl:72px;
+      --space-lg:56px;
+      --space-md:28px;
+      --space-sm:14px;
+
+      --anchor-offset:120px;
 
       /* Header/Logo */
       --logo-h-desktop:170px;
       --logo-h-mobile:120px;
       --logo-scale-scrolled:.9;
-
-      /* Hero */
-      --hero-py: clamp(56px, 9vw, 110px);
-      --hero-gap: 18px;
     }
 
     *,*::before,*::after{box-sizing:border-box}
@@ -41,21 +43,23 @@
       -webkit-font-smoothing:antialiased;
       text-rendering:optimizeLegibility;
     }
-    .container{ width:min(var(--maxw), 92vw); margin-inline:auto }
 
     /* Tipografia e links */
     h1,h2,h3{
       color:var(--gold); font-weight:600; line-height:1.2;
       margin:0 0 var(--space-sm); letter-spacing:.2px;
     }
-    h1{ font-size:clamp(1.4rem, 4vw, 2rem) }
     h2{ font-size:clamp(1.25rem, 2.2vw, 1.6rem) }
     h3{ font-size:clamp(1.05rem, 1.8vw, 1.25rem) }
-    p{ margin:0 0 .9rem; font-size:clamp(.98rem,1.2vw,1.06rem) }
+    p{ margin:0 0 0.9rem; font-size:clamp(.98rem,1.2vw,1.06rem) }
+    ul{ margin:.2rem 0 1rem; padding-left:1.15rem }
+    li{ margin:.35rem 0 }
     a{ color:var(--mint); text-decoration:none; transition:.25s }
     a:hover{ opacity:.9 }
 
-    /* ===== Header minimal ===== */
+    .container{ width:min(var(--maxw), 92vw); margin-inline:auto }
+
+    /* ===== Header (estável e simples) ===== */
     header{
       position:sticky; top:0; z-index:30;
       background:color-mix(in srgb, var(--brand) 96%, #000 0%);
@@ -64,17 +68,17 @@
       transition:box-shadow .2s ease;
     }
     .nav{
-      display:grid; align-items:center;
-      grid-template-columns:1fr auto; column-gap:16px;
+      display:grid; align-items:center; column-gap:16px;
+      grid-template-columns:1fr auto; /* [brand-info central] [logo direita] */
       padding:10px 0;
     }
     .brand-info{
-      text-align:center; color:#fff;
-      display:flex; flex-direction:column; gap:2px; line-height:1.1;
-      justify-self:center;
+      justify-self:center; text-align:center; color:#fff;
+      display:flex; flex-direction:column; gap:2px; line-height:1.12;
     }
     .brand-info b{ font-weight:800; font-size:clamp(1.08rem, 2vw, 1.35rem); letter-spacing:.2px; }
     .brand-info small{ opacity:.96; font-size:clamp(.92rem,1.6vw,1rem); }
+
     .logo-wrap{ justify-self:end }
     .brand-logo{
       height:var(--logo-h-desktop); width:auto; display:block;
@@ -84,7 +88,7 @@
     header.scrolled{ box-shadow:0 8px 24px rgba(0,0,0,.25) }
     header.scrolled .brand-logo{ transform:scale(var(--logo-scale-scrolled)) }
 
-    /* Menu abaixo do header (fixo visualmente) */
+    /* Menu (logo fica no header; menu fica abaixo do header) */
     .menu-bar{
       background:color-mix(in srgb, var(--brand) 94%, #000 0%);
       border-top:1px solid rgba(255,255,255,.10);
@@ -120,35 +124,8 @@
       .menu-toggle:checked ~ nav{ display:block }
     }
 
-    /* ===== Hero em faixa ===== */
-    .hero{
-      padding-block: var(--hero-py);
-      background:
-        radial-gradient(800px 400px at 20% 0%, rgba(255,255,255,.06), transparent 60%),
-        linear-gradient(180deg, color-mix(in srgb, var(--brand) 92%, #000 0%), var(--brand));
-      color:#fff;
-    }
-    .hero-inner{
-      display:grid; gap:var(--hero-gap);
-      grid-template-columns: 1fr auto;
-      align-items:center;
-    }
-    .hero-title{
-      display:flex; flex-direction:column; gap:6px;
-      text-align:left;
-    }
-    .hero-title h1{ color:#fff; margin:0 }
-    .hero-title p{ color:#eaf7f6; margin:0; max-width:60ch }
-    .hero-cta{ display:flex; gap:12px; flex-wrap:wrap; margin-top:10px }
-    .hero-logo{ display:none } /* não repetir logo aqui; já está no topo */
-    @media (max-width:900px){
-      .hero-inner{ grid-template-columns:1fr }
-      .hero-title{ text-align:center }
-      .hero-cta{ justify-content:center }
-    }
-
     /* ===== Seções ===== */
-    .section{ padding-block: var(--space-lg); }
+    .section{ padding-block: var(--space-lg); scroll-margin-top:var(--anchor-offset) }
     @media (max-width:900px){ .section{ padding-block: 42px } }
 
     /* Quadros de texto */
@@ -158,10 +135,10 @@
     }
     .section-box :where(p,ul):last-child{ margin-bottom:0 }
 
-    /* Grades */
+    /* Grades base */
     .grid-2{
       display:grid; gap: var(--space-md);
-      grid-template-columns: 1fr 1fr; align-items:center;
+      grid-template-columns: 1fr 1fr; align-items:stretch;
     }
     @media (max-width:900px){ .grid-2{ grid-template-columns:1fr } }
 
@@ -172,26 +149,29 @@
     }
     @media (max-width:900px){ .grid-3{ grid-template-columns:1fr } }
 
-    /* Cards das especialidades */
-    .grid-3 .section-box{ display:flex; flex-direction:column; gap:12px; }
-    .grid-3 .mini-cta{ margin-top:auto; display:flex; justify-content:center }
-
-    /* Imagens */
+    /* Imagens proporcionais (preenche o quadro) */
     .media-frame{
       border-radius:var(--radius);
       overflow:hidden;
       background:#0f5b5d;
       display:block;
-      aspect-ratio: 3 / 2;
+      aspect-ratio: 3 / 2; /* coerente com sua foto e imagem de sessão */
     }
     .cover-img{ width:100%; height:100%; object-fit:cover; display:block }
-    @media (max-width:900px){ .media-frame{ aspect-ratio:3/2 } }
 
-    /* Ajuste leve na primeira seção (texto mais largo) */
+    /* Ajuste leve na primeira seção (texto mais largo no desktop) */
     @media (min-width:901px){
       #psicoterapia .container.grid-2{ grid-template-columns: 1.25fr 0.95fr; }
       #psicoterapia .section-box{ padding:28px 28px 32px; }
     }
+
+    /* Cards das especialidades (altura igual + botões alinhados) */
+    .grid-3 .section-box{
+      display:flex; flex-direction:column; gap:12px; min-height:100%;
+    }
+    .grid-3 .section-box h3{ margin-top:2px }
+    .grid-3 .section-box ul{ margin-top:2px }
+    .grid-3 .mini-cta{ margin-top:auto; display:flex; justify-content:center }
 
     /* Botões */
     .btn{
@@ -204,17 +184,6 @@
     /* Social */
     .social{ display:flex; justify-content:center; gap:12px; flex-wrap:wrap; margin-top:12px }
     .social a{ display:inline-flex; width:52px; height:52px; border-radius:12px; overflow:hidden }
-
-    /* Faixa CTA larga antes do rodapé */
-    .cta-band{
-      background:var(--brand-2);
-      padding-block: clamp(36px, 7vw, 72px);
-      color:#fff;
-      text-align:center;
-    }
-    .cta-band h2{ color:#fff; margin-bottom:8px }
-    .cta-band p{ color:#eaf7f6; margin:0 0 14px }
-    .cta-actions{ display:flex; gap:12px; flex-wrap:wrap; justify-content:center }
 
     /* Rodapé */
     footer{
@@ -231,6 +200,7 @@
     @media (max-width:900px){ .footer-logo{ height:var(--logo-h-mobile) } }
   </style>
 </head>
+
 <body>
   <!-- ===== HEADER ===== -->
   <header id="topbar">
@@ -243,6 +213,7 @@
         <img src="Logomarca.png" alt="Logomarca Laura Sathler" class="brand-logo" onerror="this.style.display='none'">
       </div>
     </div>
+
     <div class="menu-bar">
       <div class="container">
         <input id="menu" class="menu-toggle" type="checkbox" />
@@ -259,20 +230,6 @@
       </div>
     </div>
   </header>
-
-  <!-- ===== HERO ===== -->
-  <section class="hero">
-    <div class="container hero-inner">
-      <div class="hero-title">
-        <h1>Psicoterapia humanista-existencial</h1>
-        <p>Espaço de escuta, acolhimento e reflexão. Atendimento on-line com cuidado, presença e respeito ao seu ritmo.</p>
-        <div class="hero-cta">
-          <a class="btn" href="https://wa.me/5531991593800?text=Olá,%20gostaria%20de%20agendar%20uma%20sessão%20de%20psicoterapia.">Agendar sessão</a>
-          <a class="btn" href="#especialidades">Ver especialidades</a>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <main>
     <!-- ===== Psicoterapia ===== -->
@@ -353,6 +310,15 @@
             <div class="mini-cta"><a class="btn" href="#contato">Atendimento para casal</a></div>
           </div>
         </div>
+
+        <div class="section-box" style="text-align:center; margin-top:var(--space-md)">
+          <strong>Não precisa enfrentar tudo sozinho(a).</strong>
+          <p style="margin:.5rem 0 1rem">Se você se identificou com algum ponto, um primeiro encontro pode trazer clareza sobre próximos passos.</p>
+          <div class="mini-cta">
+            <a class="btn" href="https://wa.me/5531991593800?text=Olá,%20gostaria%20de%20agendar%20uma%20sessão%20de%20psicoterapia.">Agendar sessão</a>
+            <a class="btn" href="mailto:Laurasathler@yahoo.com.br">Falar por e-mail</a>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -372,24 +338,17 @@
       </div>
     </section>
 
-    <!-- ===== CTA Band ===== -->
-    <section class="cta-band">
-      <div class="container">
-        <h2>Pronto(a) para dar o próximo passo?</h2>
-        <p>Agende uma conversa inicial — é um bom começo para ganhar clareza.</p>
-        <div class="cta-actions">
-          <a class="btn" href="https://wa.me/5531991593800?text=Olá,%20gostaria%20de%20agendar%20uma%20sessão%20de%20psicoterapia.">Falar no WhatsApp</a>
-          <a class="btn" href="mailto:Laurasathler@yahoo.com.br">Falar por e-mail</a>
-        </div>
-      </div>
-    </section>
-
     <!-- ===== Contato ===== -->
     <section id="contato" class="section">
       <div class="container">
         <div class="section-box" style="text-align:center">
           <h2>Agende sua sessão</h2>
           <p>Estou à disposição para conversar e iniciar um processo terapêutico com você.</p>
+
+          <div class="mini-cta" style="justify-content:center">
+            <a class="btn" href="https://wa.me/5531991593800?text=Olá,%20gostaria%20de%20agendar%20uma%20sessão%20de%20psicoterapia.">📱 WhatsApp</a>
+            <a class="btn" href="mailto:Laurasathler@yahoo.com.br">📧 E-mail</a>
+          </div>
 
           <div class="social" aria-label="Canais de contato">
             <!-- WhatsApp -->
@@ -433,7 +392,7 @@
     // Ano dinâmico
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    // Header: sombra ao rolar
+    // Sombra do topo ao rolar (sem alterar altura)
     const header = document.getElementById('topbar');
     function onScroll(){ header.classList.toggle('scrolled', window.scrollY > 10); }
     window.addEventListener('scroll', onScroll, {passive:true});
