--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       color:var(--gold); font-weight:600; line-height:1.2;
       margin:0 0 var(--space-sm); letter-spacing:.2px;
     }
+    h1{ font-size:clamp(1.6rem, 3.2vw, 2.2rem) }
     h2{ font-size:clamp(1.25rem, 2.2vw, 1.6rem) }
     h3{ font-size:clamp(1.05rem, 1.8vw, 1.25rem) }
     p{ margin:0 0 0.9rem; font-size:clamp(.98rem,1.2vw,1.06rem) }
@@ -59,7 +60,7 @@
 
     .container{ width:min(var(--maxw), 92vw); margin-inline:auto }
 
-    /* ===== Header (estável e simples) ===== */
+    /* ===== Header ===== */
     header{
       position:sticky; top:0; z-index:30;
       background:color-mix(in srgb, var(--brand) 96%, #000 0%);
@@ -69,7 +70,7 @@
     }
     .nav{
       display:grid; align-items:center; column-gap:16px;
-      grid-template-columns:1fr auto; /* [brand-info central] [logo direita] */
+      grid-template-columns:1fr auto; /* [brand-info] [logo] */
       padding:10px 0;
     }
     .brand-info{
@@ -88,7 +89,7 @@
     header.scrolled{ box-shadow:0 8px 24px rgba(0,0,0,.25) }
     header.scrolled .brand-logo{ transform:scale(var(--logo-scale-scrolled)) }
 
-    /* Menu (logo fica no header; menu fica abaixo do header) */
+    /* Menu (faixa abaixo do header) */
     .menu-bar{
       background:color-mix(in srgb, var(--brand) 94%, #000 0%);
       border-top:1px solid rgba(255,255,255,.10);
@@ -124,6 +125,33 @@
       .menu-toggle:checked ~ nav{ display:block }
     }
 
+    /* ===== Hero (novo topo) ===== */
+    .hero{
+      position:relative;
+      padding-block: clamp(56px, 12vh, 120px);
+      background:
+        radial-gradient(55% 70% at 50% 20%, rgba(255,255,255,.08), transparent 60%),
+        linear-gradient(180deg, rgba(255,255,255,.06), rgba(0,0,0,.00));
+      color:#fff;
+    }
+    .hero .container{ max-width: 980px; text-align:center }
+    .hero h1{
+      color:#fff;
+      font-weight:800;
+      line-height:1.15;
+      font-size: clamp(1.8rem, 4.2vw, 2.6rem);
+      letter-spacing:.2px;
+      margin-bottom: 12px;
+    }
+    .hero p{
+      color: #E9F4F3;
+      font-size: clamp(1rem, 1.6vw, 1.15rem);
+      line-height: 1.5;
+      margin: 0 auto 22px;
+      max-width: 820px;
+    }
+    .hero .cta{ display:flex; gap:12px; justify-content:center; flex-wrap:wrap }
+
     /* ===== Seções ===== */
     .section{ padding-block: var(--space-lg); scroll-margin-top:var(--anchor-offset) }
     @media (max-width:900px){ .section{ padding-block: 42px } }
@@ -155,7 +183,7 @@
       overflow:hidden;
       background:#0f5b5d;
       display:block;
-      aspect-ratio: 3 / 2; /* coerente com sua foto e imagem de sessão */
+      aspect-ratio: 3 / 2;
     }
     .cover-img{ width:100%; height:100%; object-fit:cover; display:block }
 
@@ -169,15 +197,13 @@
     .grid-3 .section-box{
       display:flex; flex-direction:column; gap:12px; min-height:100%;
     }
-    .grid-3 .section-box h3{ margin-top:2px }
-    .grid-3 .section-box ul{ margin-top:2px }
     .grid-3 .mini-cta{ margin-top:auto; display:flex; justify-content:center }
 
-    /* Botões */
+    /* Botões (hero e seções) */
     .btn{
       display:inline-block; background:var(--gold); color:var(--card);
-      border:none; border-radius:8px; padding:10px 20px; font-weight:700;
-      min-width:180px; text-align:center; transition:.25s; text-decoration:none;
+      border:none; border-radius:8px; padding:12px 22px; font-weight:700;
+      min-width:200px; text-align:center; transition:.25s; text-decoration:none;
     }
     .btn:hover{ background:var(--mint); color:var(--brand) }
 
@@ -214,6 +240,7 @@
       </div>
     </div>
 
+    <!-- Barra de navegação -->
     <div class="menu-bar">
       <div class="container">
         <input id="menu" class="menu-toggle" type="checkbox" />
@@ -230,6 +257,18 @@
       </div>
     </div>
   </header>
+
+  <!-- ===== HERO NOVO ===== -->
+  <section class="hero">
+    <div class="container">
+      <h1>Um espaço para se escutar, compreender e se reencontrar.</h1>
+      <p>Cuidar de si é um processo. Aqui, cada conversa é um convite à presença, ao cuidado e ao autoconhecimento.</p>
+      <div class="cta">
+        <a class="btn" href="#contato">Agendar sessão</a>
+        <a class="btn" href="#especialidades">Ver especialidades</a>
+      </div>
+    </div>
+  </section>
 
   <main>
     <!-- ===== Psicoterapia ===== -->
